--- a/Noname.Hangfire.Mongo/appsettings.Default.json
+++ b/Noname.Hangfire.Mongo/appsettings.Default.json
@@ -5,9 +5,9 @@
         ""
       ],
       "Options": {
-        "authSource": "",
-        "replicaSet": "",
-        "ssl": false
+        "AuthSource": "",
+        "ReplicaSet": "",
+        "Ssl": false
       },
       "PassWord": "",
       "UserName": ""
@@ -16,4 +16,4 @@
   "UserDashboardHangfire": {
     "admin": "123123"
   }
-} 
+}
